--- a/src/components/profile/_profile-name.scss
+++ b/src/components/profile/_profile-name.scss
@@ -7,5 +7,6 @@
 
   [class*="_redesign__username"] {
     font-size: var(--font-size-smaller);
+    gap: 2px;
   }
 }
